<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:apps="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/primary"
  android:orientation="vertical">


  <v.navigationbar.VNavigationBar
    android:id="@+id/vnNavigationbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:leftIcon="@drawable/common_navigation_back"
    app:title="@string/about" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:layout_marginBottom="60dp"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <RelativeLayout
      android:layout_width="75dp"
      android:layout_height="75dp">

      <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:scaleType="centerCrop"
        android:src="@drawable/splash_icon" />
    </RelativeLayout>

    <TextView
      android:id="@+id/tv_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="13dp"
      android:ellipsize="end"
      android:maxLines="1"
      android:text="@string/app_name"
      android:textColor="@color/white_70_opacity"
      android:textSize="20sp"
      android:textStyle="bold"
      apps:text="秘盒空间" />

    <TextView
      android:id="@+id/tv_version"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="5dp"
      android:ellipsize="end"
      android:maxLines="1"
      android:text="版本:V1.0.0"
      android:textColor="#AAAAAA"
      android:textSize="13sp"
      android:textStyle="bold"
      apps:text="版本" />
  </LinearLayout>

  <RelativeLayout
    android:id="@+id/rl_check_update"
    android:layout_width="wrap_content"
    android:layout_height="52dp"
    android:gravity="center_vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/about_check_new_version"
      android:textColor="@color/white_70_opacity"
      android:textFontWeight="500"
      android:textSize="15sp" />

    <ImageView
      android:layout_width="12dp"
      android:layout_height="12dp"
      android:layout_alignParentRight="true"
      android:scaleType="centerInside"
      android:src="@drawable/icon_arrow" />
  </RelativeLayout>

  <include layout="@layout/profile_view_line" />

  <LinearLayout
    android:id="@+id/ll_agreement"
    android:layout_width="match_parent"
    android:layout_height="52dp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/about_user_agreement"
      android:textColor="@color/white_70_opacity"
      android:textFontWeight="500"
      android:textSize="15sp" />

    <ImageView
      android:layout_width="12dp"
      android:layout_height="12dp"
      android:scaleType="centerInside"
      android:src="@drawable/icon_arrow" />
  </LinearLayout>

  <include layout="@layout/profile_view_line" />

  <RelativeLayout
    android:id="@+id/rl_privacy"
    android:layout_width="match_parent"
    android:layout_height="52dp"
    android:gravity="center_vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/about_policy"
      android:textColor="@color/white_70_opacity"
      android:textFontWeight="500"
      android:textSize="15sp" />

    <ImageView
      android:id="@+id/iv_privacy"
      android:layout_width="12dp"
      android:layout_height="12dp"
      android:layout_alignParentRight="true"
      android:scaleType="centerInside"
      android:src="@drawable/icon_arrow" />
  </RelativeLayout>

  <include layout="@layout/profile_view_line" />
</LinearLayout>